yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: info-site
spec:
  selector:
    app: info-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
